# imitation

./: .gitignore  BC_policy  CHEETAH_HANDOFF.md  handoff.md  notes.md  pyproject.toml  requirements.txt
do-mpc/do_mpc/: simulator.py
examples/: ntril_example.py
expert_traj/: data-00000-of-00001.arrow  state.json
src/imitation/algorithms/: bc.py
src/imitation/data/: rollout.py
src/imitation/policies/: base.py
src/imitation/rewards/: reward_nets.py
src/imitation/scripts/: train_ntril.py
src/imitation/scripts/NTRIL/: README.md  __init__.py  demonstration_ranked_irl.py  guide.md  noise_injection.py  ntril.py  ranked_dataset.py  robust_tube_mpc.py  utils.py
src/imitation/scripts/NTRIL/MCC/: main_sim.py
src/imitation/scripts/NTRIL/double_integrator/: __init__.py  base_drex.py  base_ssrr.py  double_integrator.py  inspect_augmented_snippets.py  main_sim.py  test_sole_mpc.py  test_suboptimal_expert.py  util.py  variant_SSRR.py  variant_ntril.py
src/imitation/scripts/NTRIL/testcode/: BC_policy  apply_robust_tube_mpc.py  build_ranked_dataset.py  evaluate_final_policy.py  generate_expert_demonstrations.py  generate_noisy_rollouts.py  main_test_file.py  test_linear_mpc_double.py  test_mpc.py  test_tagliabue.py  (+4 more)
src/imitation/scripts/Robust_Tube_MPC/: TubeModelPredictiveControl.py
src/imitation/scripts/SSRR/: README.md  __init__.py  curve_fit.py  noise_rollouts.py  noisy_airl.py  reporting.py  reward_regression.py  runner_double_integrator.py  types.py  util.py
src/imitation/scripts/config/: train_ntril.py
src/imitation/util/: util.py
tests/: test_ntril.py
(+305 files in other folders)
