[project]
name = "imitation"
# Let setuptools_scm and setup.py handle everything dynamically
dynamic = ["version", "dependencies", "description", "readme"]

[build-system]
# Pin to setuptools 66.1.1 because of gym==0.21.0 compatibility
requires = ["setuptools==66.1.1", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.black]
target-version = ["py38"]

[tool.pytype]
inputs = [
  "src/",
  "tests/",
  "experiments/",
  "setup.py"
]
python_version = "3.8"
